--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,10 @@ Maintainer: https://github.com/seznam/goenvtemplator
 Section: admin
 Priority: optional
 Build-Depends: debhelper (>= 9), golang (>= 2:1.5), git
+Replaces: goenvtemplator
+Breaks: goenvtemplator
 
-Package: goenvtemplator
+Package: goenvtemplator2
 Architecture: amd64
 Description: Tool to template configuration files by environment variables.
  goenvtemplator is a simple app, that can template your config files by
