--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,5 @@ package: github.com/seznam/goenvtemplator
 import:
 - package: github.com/joho/godotenv
   version: v1
+- package: github.com/Masterminds/sprig
+  version: 2.8.0
