--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,13 @@ Source: goenvtemplator
 Maintainer: https://github.com/seznam/goenvtemplator
 Section: admin
 Priority: optional
-Build-Depends: debhelper (>= 9), golang (>= 2:1.5), git
+Build-Depends: debhelper (>= 9), golang (>= 2:1.5), git, dh-golang
+Standards-Version: 3.9.4
 
 Package: goenvtemplator
 Architecture: amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Built-Using: ${misc:Built-Using}
 Description: Tool to template configuration files by environment variables.
  goenvtemplator is a simple app, that can template your config files by
  environment variables and optionally replace itself (by exec syscall)
