--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 
-%:
-	+dh $@ --parallel
+# export DH_VERBOSE=1
 
-override_dh_auto_install:
-	mkdir -p ./debian/goenvtemplator/usr/bin
-	install -m 0755 goenvtemplator ./debian/goenvtemplator/usr/bin
+%:
+	+dh $@ --with=golang
