--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,6 @@ import:
   version: v1
 - package: github.com/Masterminds/sprig
   version: 2.8.0
+- package: github.com/flosch/pongo2
+  version: v3
+- package: github.com/golang/glog
