chore: fix goreleaser config
Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,15 @@
+before:
+  hooks:
+    - go mod tidy
+
+builds:
+  - env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - windows
+      - darwin
+
 release:
   github:
     owner: seznam
@@ -6,15 +18,24 @@ release:
   draft: true
   name_template: "v{{.Version}}"
 
+archives:
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
+
+checksum:
+  name_template: 'checksums.txt'
+
+snapshot:
+  name_template: "v{{.Version}}-  next"
+
 changelog:
+  sort: asc
   filters:
     exclude:
       - '^docs:'
+      - '^test:'
       - '^chore:'
-
-builds:
-  - main: .
-    id: "goenvtemplator"
-    binary: goenvtemplator2
-    goos:
-      - linux
